# btkey_sync

./: .gitignore  README.md  __init__.py  actions.py  actions_classic.py  actions_classic_extra.py  actions_clone.py  actions_common.py  actions_help.py  actions_remove.py  actions_show.py  actions_verify.py  actions_windows.py  cli.py  import-bt-key.py  models.py  platform_detect.py  pyproject.toml  resync_ble_mouse.py  resync_bt_mouse.py  storage.py  tui_helpers.py
.github/workflows/: workflow.yml
backends/: __init__.py  base.py  linux_backend.py  linux_classic.py  offline_windows.py  offline_windows_classic.py  windows_backend.py  windows_common.py
exporters/: __init__.py  classic_exporter.py  reg_exporter.py
importers/: __init__.py  classic_importer.py  reg_importer.py
tests/: test_parsing.py
tests/fixtures/: sample_keyboard_classic.reg  sample_mouse.reg
