[project]
name = "btkey_sync"
version = "0.1.0"
description = "Sincronize bondings Bluetooth LE between Windows and Linux in dual boot setups"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
btkey-sync = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backends", "exporters", "importers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
