[project]
name = "Btkey-Sync"
version = "0.1.0"
description = "Synchronize Bluetooth LE and Classic bond keys between Windows and Linux in dual-boot setups"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/netssv/btkey_sync"
Repository = "https://github.com/netssv/btkey_sync"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
btkey-sync = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backends", "backends.*", "exporters", "exporters.*", "importers", "importers.*"]

[tool.setuptools.py-modules]
# Flat modules at the root level
include = [
  "cli",
  "tui_helpers",
  "models",
  "platform_detect",
  "storage",
  "actions",
  "actions_classic",
  "actions_classic_extra",
  "actions_clone",
  "actions_common",
  "actions_help",
  "actions_remove",
  "actions_show",
  "actions_verify",
  "actions_windows",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
